code for results dm prop sb

--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -2947,7 +2947,7 @@ for (i in seq_along(cvvs_dmpropsb_new_list)) {
 Manual choices for model size:
 
 ```{r}
-size_decided_dmpropsb_new_list <- list(4, 5, 7, NA, 14, 5, 13, 3, 8, 6)
+size_decided_dmpropsb_new_list <- list(13, 6, NA, 3, 6, 6, 7, 9, 2, 4)
 names(size_decided_dmpropsb_new_list) <- names(cvvs_dmpropsb_new_list)
 size_decided_dmpropsb_new_list
 ```
@@ -3855,5 +3855,354 @@ for (i in seq_along(mod_final_oltotal_list)) {
   }
 }
 ```
+
+
+### De Moeren
+#### area prop sb (categorised)
+
+Create list with model structure
+
+```{r}
+predictors_dmpropsb_new_list <- vector("list",
+                                       length = length(cvvs_dmpropsb_new_list))
+predictors_dmpropsb_new_names <- vector(length = length(cvvs_dmpropsb_new_list))
+
+for (i in seq_along(cvvs_dmpropsb_new_list)) {
+  mod_size <- size_decided_dmpropsb_new_list[[i]]
+  spec <- names(cvvs_dmpropsb_new_list)[i]
+  
+  if (is.na(mod_size)) {
+    predictors_dmpropsb_new_list[[i]] <- NA
+  } else {
+    cvvs <- cvvs_dmpropsb_new_list[[i]]
+    
+    rk <- ranking(cvvs)
+    preds <- head(rk[["fulldata"]], mod_size)
+    
+    predictors_dmpropsb_new_list[[i]]$predictors <- preds
+    predictors_dmpropsb_new_list[[i]]$formula <- bf(paste("aantal", "~", 
+                                                   paste(preds, 
+                                                         collapse = " + ")))
+  }
+  
+  predictors_dmpropsb_new_names[i] <- spec
+}
+names(predictors_dmpropsb_new_list) <- predictors_dmpropsb_new_names
+predictors_dmpropsb_new_list <- predictors_dmpropsb_new_list[!is.na(predictors_dmpropsb_new_list)]
+```
+
+Fit models for both Poisson and Zero-inflated Poisson.
+
+```{r}
+# MCMC parameters
+nchains <- 3           # number of chains
+niter <- 8000         # number of iterations (incl. burn-in)
+burnin <- niter / 4    # number of initial samples to discard (burn-in)
+nparallel <- nchains   # number of cores used for parallel computing
+thinning <- 2
+```
+
+```{r}
+mod_final_pois_dmpropsb_list <- vector("list", length = length(predictors_dmpropsb_new_list))
+mod_final_zip_dmpropsb_list <- vector("list", length = length(predictors_dmpropsb_new_list))
+
+for (i in seq_along(predictors_dmpropsb_new_list)) {
+  spec <- names(predictors_dmpropsb_new_list)[i]
+  
+  # Poisson
+  name_pois <- paste0("mod_final_pois_dmpropsb_", spec)
+  print(paste("Busy fitting", name_pois, "..."))
+  assign(name_pois,
+         brm(formula = predictors_dmpropsb_new_list[[spec]]$formula,
+             data = df_count_list_dmnew_scaled[[spec]], 
+             family = poisson(),
+             chains = nchains, 
+             warmup = burnin, 
+             iter = niter,
+             cores = nparallel,
+             thin = thinning,
+             backend = "cmdstanr",
+             file = paste0(model_path, name_pois),
+             file_refit = "on_change"))
+  
+  ## Perform K-fold cross-validation
+  assign(name_pois,
+         add_criterion(get(name_pois), c("kfold"), K = 5, cores = 5))
+  
+  mod_final_pois_dmpropsb_list[[i]] <- get(name_pois)
+  
+  # Zero-inflated Poisson
+  name_zip <- paste0("mod_final_zip_dmpropsb_", spec)
+  print(paste("Busy fitting", name_zip, "..."))
+  assign(name_zip,
+         brm(formula = predictors_dmpropsb_new_list[[spec]]$formula,
+             data = df_count_list_dmnew_scaled[[spec]], 
+             family = zero_inflated_poisson(),
+             chains = nchains, 
+             warmup = burnin, 
+             iter = niter,
+             cores = nparallel,
+             thin = thinning,
+             backend = "cmdstanr",
+             file = paste0(model_path, name_zip),
+             file_refit = "on_change"))
+  
+  ## Perform K-fold cross-validation
+  assign(name_zip,
+         add_criterion(get(name_zip), c("kfold"), K = 5, cores = 5))
+  
+  mod_final_zip_dmpropsb_list[[i]] <- get(name_zip)
+}
+
+names(mod_final_pois_dmpropsb_list) <- names(predictors_dmpropsb_new_list)
+names(mod_final_zip_dmpropsb_list) <- names(predictors_dmpropsb_new_list)
+```
+
+Model selection between poisson and zero-inflated poisson based on 5-fold CV and posterior predictive check.
+
+```{r, results="asis"}
+for (i in seq_along(predictors_dmpropsb_new_list)) {
+  spec <- names(predictors_dmpropsb_new_list)[i]
+  model_pois <- mod_final_pois_dmpropsb_list[[i]]
+  model_zip <- mod_final_zip_dmpropsb_list[[i]]
+  
+  print(paste("Model selection", spec, "(De Moeren - prop sb)"))
+  
+  # Comparison among models
+  comparisons <- loo_compare(model_pois, model_zip,
+                             criterion = "kfold")[, c(1, 2)]
+  
+  comparisons %>%
+    as.data.frame() %>%
+    rownames_to_column("model") %>%
+    mutate(CI_ll = elpd_diff  + qnorm(0.10) * se_diff,
+           CI_ul = elpd_diff  + qnorm(0.90) * se_diff,
+           width = 0.9 - 0.1) %>%
+    arrange(desc(elpd_diff)) %>%
+    kable(digits = 3) %>%
+    print()
+  
+  p1 <- pp_check(model_pois, type = "bars", ndraws = 100) +
+    ggtitle(paste("Poisson model", spec, "(De Moeren - prop sb)"))
+  p2 <- pp_check(model_zip, type = "bars", ndraws = 100) +
+    ggtitle(paste("ZIP model", spec, "(De Moeren - prop sb)"))
+  print(p1)
+  print(p2)
+}
+```
+
+
+```{r}
+mod_final_dmpropsb_list <- list(
+  mod_final_zip_dmpropsb_list$Geelgors,
+  mod_final_pois_dmpropsb_list$GeleKwikstaart,
+  mod_final_pois_dmpropsb_list$Grasmus,
+  mod_final_zip_dmpropsb_list$Kievit,
+  mod_final_pois_dmpropsb_list$Kneu,
+  mod_final_pois_dmpropsb_list$Kwartel,
+  mod_final_pois_dmpropsb_list$Torenvalk,
+  mod_final_pois_dmpropsb_list$Veldleeuwerik,
+  mod_final_pois_dmpropsb_list$WitteKwikstaart
+  )
+names(mod_final_dmpropsb_list) <- names(predictors_dmpropsb_new_list)
+```
+
+
+MCMC convergence and model fit.
+
+```{r}
+for (i in seq_along(mod_final_dmpropsb_list)) {
+  spec <- names(mod_final_dmpropsb_list)[i]
+  model <- mod_final_dmpropsb_list[[spec]]
+  
+  # MCMC convergence
+  print(paste("MCMC convergence", spec, "(De Moeren - prop sb)"))
+  plot(model, ask = FALSE)
+  
+  # Model fit
+  print(paste("Model fit", spec, "(De Moeren - prop sb)"))
+  pp_check(model, type = "bars_grouped", ndraws = 100, 
+           group = "area_prop_sb_cat",
+           facet_args = list(ncol = 1, scales = "free_y")) %>%
+    print()
+}
+```
+
+Results:
+
+```{r}
+for (i in seq_along(mod_final_dmpropsb_list)) {
+  spec <- names(mod_final_dmpropsb_list)[i]
+  model <- mod_final_dmpropsb_list[[i]]
+  
+  # Print summary
+  print(paste("Results", spec, "(De Moeren - prop sb)"))
+  print(summary(model))
+  
+  # Visualise results
+  for (pred in predictors_dmpropsb_new_list[[spec]]$predictors) {
+    p <- plot_brms_fit(model, pred) +
+      ggtitle(paste(spec, "De Moeren", sep = " - "))
+    print(p)
+  }
+}
+```
+
+We zijn vooral geïnteresseerd in het verschil tussen soortbeschermingsplannen en nulbeleid.
+Dit kunnen we proportioneel uitdrukken.
+
+```{r}
+get_effects <- function(df, ref = 0,
+                        min_threshold = -0.2,
+                        max_threshold = 0.25) {
+  require(effectclass)
+  
+  # add effects
+  df$effect_fine <- classification(
+    lcl = df$lcl,
+    ucl = df$ucl,
+    threshold = c(min_threshold, max_threshold))
+
+  df$effect_coarse <- coarse_classification(df$effect_fine)
+  
+  # order and rename effects
+  out <- df %>%
+    mutate(
+      trend_fine = case_when(
+          effect_fine == "++" ~ "strong positief effect",
+          effect_fine == "+" ~ "positief effect",
+          effect_fine == "+~" ~ "gematigd positief effect",
+          effect_fine == "~" ~ "stabiel",
+          effect_fine == "-" ~ "negatief effect",
+          effect_fine == "-~" ~ "gematigd negatief effect",
+          effect_fine == "--" ~ "sterk negatief effect",
+          TRUE ~ "onzeker",
+      ),
+      trend_fine = factor(trend_fine,
+        levels = c(
+          "strong positief effect",
+          "positief effect",
+          "gematigd positief effect",
+          "stabiel",
+          "gematigd negatief effect",
+          "negatief effect",
+          "sterk negatief effect",
+          "onzeker"),
+        ordered = TRUE)
+    ) %>%
+    mutate(
+      trend_coarse = case_when(
+          effect_coarse == "+" ~ "positief effect",
+          effect_coarse == "-" ~ "negatief effect",
+          effect_coarse == "~" ~ "stabiel",
+          TRUE ~ "onzeker",
+      ),
+      trend_coarse = factor(trend_coarse,
+        levels = c("positief effect",
+                   "stabiel",
+                   "negatief effect",
+                   "onzeker"),
+        ordered = TRUE)
+    ) %>%
+    mutate(
+      trend_simple = case_when(
+        lcl > ref ~ "positief effect",
+        ucl < ref ~ "negatief effect",
+        TRUE ~ "stabiel of onzeker effect"
+        ),
+      trend_simple = factor(trend_simple,
+        levels = c("positief effect",
+                   "negatief effect",
+                   "stabiel of onzeker effect"),
+        ordered = TRUE)
+    ) %>%
+    select(-c(effect_fine, effect_coarse))
+}
+
+create_draws_df <- function(model, seed = 123, ...) {
+  df <- model %>%
+    spread_draws(`b_area_prop_sb_cat.*`, regex = TRUE, seed = seed) %>%
+    select(starts_with("b_area_prop_sb_cat")) %>%
+    pivot_longer(cols = everything(), names_to = "area_prop_sb_cat_long") %>%
+    mutate(area_prop_sb_cat = gsub("b_area_prop_sb_cat", "",
+                                   area_prop_sb_cat_long),
+           value_log = value,
+           value = exp(value) - 1) %>%
+    select(area_prop_sb_cat, value_log, value) %>%
+    group_by(area_prop_sb_cat) %>%
+    mutate(median_log = median(value_log),
+           lcl_log = quantile(value_log, 0.05),
+           ucl_log = quantile(value_log, 0.95)) %>%
+    mutate(median = median(value),
+           lcl = quantile(value, 0.05),
+           ucl = quantile(value, 0.95)) %>%
+    ungroup() %>%
+    mutate(.point = "median",
+           .width = 0.95 - 0.05)
+  
+  df_ordered <- df %>%
+    mutate(area_prop_sb_cat = factor(area_prop_sb_cat,
+                                     levels = c("nulbeleid",
+                                                "laagbeleid",
+                                                "middellaagbeleid",
+                                                "middelhoogbeleid",
+                                                "hoogbeleid"),
+                                      ordered = TRUE))
+  
+  out <- get_effects(df_ordered, ...)
+}
+```
+
+```{r}
+# get posterior draws for parameters of interest
+draws_dmpropsb_list <- lapply(mod_final_dmpropsb_list, create_draws_df)
+```
+
+We visualiseren dit:
+
+```{r}
+for (spec in names(draws_dmpropsb_list)) {
+  p <- draws_dmpropsb_list[[spec]] %>%
+    left_join(area_prop_cats, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
+      geom_violin(aes(y = value_log, fill = trend_coarse),
+                  colour = alpha("white", 0)) +
+      geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+      geom_hline(yintercept = c(min_threshold, max_threshold),
+                 linetype = "dotdash") +
+      geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                    linewidth = 1, colour = "black", width = 0.1) +
+      geom_point(aes(y = median_log),
+                 size = 2.2, colour = "black") +
+      scale_fill_manual(values =  c("chartreuse3",
+                                    "gold",
+                                    "firebrick1",
+                                    "skyblue"),
+                        drop = FALSE) +
+      labs(y = "Procentuele wijziging t.o.v. nulbeleid",
+           x = "",
+           title = spec,
+           fill = "Trend") +
+      scale_y_continuous(
+        breaks = index_breaks(),
+        labels = index_labels,
+        minor_breaks = minor_breaks(),
+        #limits = c(-log(3.3), log(3.3)),
+        sec.axis = sec_axis(~ exp(.),
+          breaks = index_breaks_rev(),
+          labels = index_labels_rev(),
+          name = "Relatieve wijziging t.o.v. nulbeleid")
+        ) +
+      theme(
+        legend.position = "right",
+        legend.background = element_rect(fill = "white", color = "darkgrey"),
+        legend.margin = margin(6, 6, 6, 6)
+        )
+  print(p)
+}
+```
+
 
 # Referenties
