--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -3644,6 +3644,57 @@ create_draws_df <- function(model, seed = 123, ...) {
   
   out <- get_effects(df_ordered, ...)
 }
+
+create_weighted_draws_df <- function(model, seed = 123, ...) {
+  weight_df <- model$data %>%
+    filter(area_prop_sb_cat != "nulbeleid") %>%
+    count(area_prop_sb_cat) %>%
+    mutate(
+      group = case_when(
+        grepl("laagbeleid", area_prop_sb_cat) ~ "laagbeleid",
+        grepl("hoogbeleid", area_prop_sb_cat) ~ "hoogbeleid"
+        )) %>%
+    group_by(group) %>%
+    mutate(sum = sum(n)) %>%
+    ungroup() %>%
+    mutate(weight = n / sum)
+  
+  df <- model %>%
+    spread_draws(`b_area_prop_sb_cat.*`, regex = TRUE, seed = seed,
+                 ndraws = 3000) %>%
+    select(starts_with("b_area_prop_sb_cat")) %>%
+    rename_with(~ gsub("b_area_prop_sb_cat", "", .x)) %>%
+    rowwise() %>%
+    mutate(laagbeleid2 = weighted.mean(c(laagbeleid, middellaagbeleid),
+             pull(weight_df[weight_df$group == "laagbeleid", "weight"])),
+           hoogbeleid2 = weighted.mean(c(middelhoogbeleid, hoogbeleid),
+             pull(weight_df[weight_df$group == "hoogbeleid", "weight"]))) %>%
+    select("laagbeleid" = laagbeleid2,
+           "hoogbeleid" = hoogbeleid2) %>%
+    pivot_longer(cols = everything(), names_to = "area_prop_sb_cat") %>%
+    mutate(value_log = value,
+           value = exp(value) - 1) %>%
+    select(area_prop_sb_cat, value_log, value) %>%
+    group_by(area_prop_sb_cat) %>%
+    mutate(median_log = median(value_log),
+           lcl_log = quantile(value_log, 0.05),
+           ucl_log = quantile(value_log, 0.95)) %>%
+    mutate(median = median(value),
+           lcl = quantile(value, 0.05),
+           ucl = quantile(value, 0.95)) %>%
+    ungroup() %>%
+    mutate(.point = "median",
+           .width = 0.95 - 0.05)
+
+  df_ordered <- df %>%
+      mutate(area_prop_sb_cat = factor(area_prop_sb_cat,
+                                levels = c("nulbeleid",
+                                            "laagbeleid",
+                                            "hoogbeleid"),
+                                ordered = TRUE))
+  
+  out <- get_effects(df_ordered, ...)
+}
 ```
 
 ```{r}
@@ -3743,6 +3794,64 @@ for (spec in names(draws_olpropsb_list)) {
   print(p)
 }
 
+```
+
+We nemen ook eens 7 % als beleidsgrens.
+Voorbeeld voor veldleeuwerik.
+We nemen het gewogen gemiddelde waarbij we wegen voor aantal data per categorie.
+
+```{r}
+# get posterior draws for parameters of interest
+draws_olpropsb_list_wt <- lapply(mod_final_olpropsb_list,
+                                 create_weighted_draws_df)
+```
+
+```{r}
+area_prop_cats2 <- tibble(
+  area_prop_sb_cat = c("nulbeleid", "laagbeleid", "hoogbeleid"),
+  prop_area_sb = c("0", "<0.07", ">0.07")
+  ) %>%
+  rowid_to_column("order")
+
+spec <- "Veldleeuwerik"
+draws_olpropsb_list_wt[[spec]] %>%
+  left_join(area_prop_cats2, by = join_by(area_prop_sb_cat)) %>%
+  mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+         label = reorder(label, order, decreasing = FALSE)) %>%
+  ggplot(aes(x = label)) +
+    geom_violin(aes(y = value_log, fill = trend_coarse),
+                colour = alpha("white", 0)) +
+    geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+    geom_hline(yintercept = c(min_threshold, max_threshold),
+               linetype = "dotdash") +
+    geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                  linewidth = 1, colour = "black", width = 0.1) +
+    geom_point(aes(y = median_log),
+               size = 2.2, colour = "black") +
+    scale_fill_manual(values =  c("chartreuse3",
+                                  "gold",
+                                  "firebrick1",
+                                  "skyblue"),
+                      drop = FALSE) +
+    labs(y = "Procentueel verschil t.o.v. nulbeleid",
+         x = "",
+         title = spec,
+         fill = "Verschil") +
+    scale_y_continuous(
+      breaks = index_breaks(),
+      labels = index_labels,
+      minor_breaks = minor_breaks(),
+      #limits = c(-log(3.3), log(3.3)),
+      sec.axis = sec_axis(~ exp(.),
+        breaks = index_breaks_rev(),
+        labels = index_labels_rev(),
+        name = "Relatief verschil t.o.v. nulbeleid")
+      ) +
+    theme(
+      legend.position = "right",
+      legend.background = element_rect(fill = "white", color = "darkgrey"),
+      legend.margin = margin(6, 6, 6, 6)
+      )
 ```
 
 
