--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -3813,45 +3813,48 @@ area_prop_cats2 <- tibble(
   ) %>%
   rowid_to_column("order")
 
-spec <- "Veldleeuwerik"
-draws_olpropsb_list_wt[[spec]] %>%
-  left_join(area_prop_cats2, by = join_by(area_prop_sb_cat)) %>%
-  mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
-         label = reorder(label, order, decreasing = FALSE)) %>%
-  ggplot(aes(x = label)) +
-    geom_violin(aes(y = value_log, fill = trend_coarse),
-                colour = alpha("white", 0)) +
-    geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
-    geom_hline(yintercept = c(min_threshold, max_threshold),
-               linetype = "dotdash") +
-    geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
-                  linewidth = 1, colour = "black", width = 0.1) +
-    geom_point(aes(y = median_log),
-               size = 2.2, colour = "black") +
-    scale_fill_manual(values =  c("chartreuse3",
-                                  "gold",
-                                  "firebrick1",
-                                  "skyblue"),
-                      drop = FALSE) +
-    labs(y = "Procentueel verschil t.o.v. nulbeleid",
-         x = "",
-         title = spec,
-         fill = "Verschil") +
-    scale_y_continuous(
-      breaks = index_breaks(),
-      labels = index_labels,
-      minor_breaks = minor_breaks(),
-      #limits = c(-log(3.3), log(3.3)),
-      sec.axis = sec_axis(~ exp(.),
-        breaks = index_breaks_rev(),
-        labels = index_labels_rev(),
-        name = "Relatief verschil t.o.v. nulbeleid")
-      ) +
-    theme(
-      legend.position = "right",
-      legend.background = element_rect(fill = "white", color = "darkgrey"),
-      legend.margin = margin(6, 6, 6, 6)
-      )
+for (spec in c("Veldleeuwerik", "WitteKwikstaart")) {
+  p <- draws_olpropsb_list_wt[[spec]] %>%
+    left_join(area_prop_cats2, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
+      geom_violin(aes(y = value_log, fill = trend_coarse),
+                  colour = alpha("white", 0)) +
+      geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+      geom_hline(yintercept = c(min_threshold, max_threshold),
+                 linetype = "dotdash") +
+      geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                    linewidth = 1, colour = "black", width = 0.1) +
+      geom_point(aes(y = median_log),
+                 size = 2.2, colour = "black") +
+      scale_fill_manual(values =  c("chartreuse3",
+                                    "gold",
+                                    "firebrick1",
+                                    "skyblue"),
+                        drop = FALSE) +
+      labs(y = "Procentueel verschil t.o.v. nulbeleid",
+           x = "",
+           title = spec,
+           fill = "Verschil") +
+      scale_y_continuous(
+        breaks = index_breaks(),
+        labels = index_labels,
+        minor_breaks = minor_breaks(),
+        #limits = c(-log(3.3), log(3.3)),
+        sec.axis = sec_axis(~ exp(.),
+          breaks = index_breaks_rev(),
+          labels = index_labels_rev(),
+          name = "Relatief verschil t.o.v. nulbeleid")
+        ) +
+      theme(
+        legend.position = "right",
+        legend.background = element_rect(fill = "white", color = "darkgrey"),
+        legend.margin = margin(6, 6, 6, 6)
+        )
+  print(p)
+  gc()
+}
 ```
 
 
